Samsung SPH-D700 (Epic 4G) kernel by nubecoder

http://www.nubecoder.com/

nubernel-EC05_v0.0.0


Changelog:
=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]

10-19-2011:
Fixing permissions for bclean script.
Fixing up branchHelper.sh (update folder is no longer in Kernel/).
Added bb_install and bb_remove to /vendor/bin/.

10-18-2011:
Specifing busybox when remounting in some scripts.
Moved custom scripts into /vendor/bin/.
Changes to README (split featurelist and changelog from README).
Changes to branchHelper.sh (don't commit when creating a feature branch).
Overhaul to initramfs (new folder layout derived from supercurio: https://github.com/supercurio/galaxysii-initramfs-modified).

10-17-2011:
Changes to init_wrapper (ensuring proper installation of busybox).

10-14-2011:
Minor changes to init.rc files.

10-11-2011:
Added some logging to the cpufreq_stats_update function.
Added warnings file creation to ncBuildHelper.sh.
Changes to progress reporting in updater-script.
Don't remount rootfs as read-only from init.rc (mount_ro handles it).
Changes to initramfs (changes to mount args).

10-04-2011:
Changes to initramfs (fixing up broken "reboot recovery").

10-01-2011:
Moving the update folder out of the Kernel folder.

09-26-2011:
Reverting "Update superuser.apk to new version" (commit ID: f4aaae3).
Disabling 1200MHz and 100MHz states by default.
Switch to DEADLINE I/O scheduler by default.
Update modules in initramfs.
Update superuser.apk to new version.
Some initramfs changes (move superuser.apk to /su, etc).
Fixing up su check.
Update su to new version.
Removing su from /sbin while still ensuring it is installed.

09-20-2011:
Reverting, "Bluetooth: Make hci_send_acl() void" (commit ID: c1b8eb7).

09-09-2011:
Fixing the nr_iowait_cpu compile error properly by using smp_processor_id()(Peter Zijlstra: https://patchwork.kernel.org/patch/109011/).
Making transition states update when states_enabled_table is changed.