@@ -2,15 +2,15 @@ Samsung SPH-D700 (Epic 4G) kernel by nubecoder
 
 http://www.nubecoder.com/
 
-nubernel-EC05_v0.0.0
+nubernel-2.6.32_v0.0.0
 
 
 Project info:
 =]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]
 
-Check the featurelist to see an overview of features.
+Check the feature list to see an overview of features.
 
-Check the changelog to see a detailed history log.
+Check the change log to see a detailed history log.
 
 =]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]
 
