@@ -13,5 +13,5 @@ ro.secure=0
 ro.allow.mock.location=0
 ro.debuggable=1
 persist.service.adb.enable=1
-ro.build.version.release=nubernel-EC05_v0.0.0
+ro.build.version.release=nubernel-2.6.32_v0.0.0
 
