@@ -35,7 +35,7 @@ ui_print("");ui_print("");ui_print("");ui_print("");ui_print("");
 ui_print("");ui_print("");sleep(1);
 
 ui_print("=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]");
-ui_print("=]            nubernel-EC05_v0.0.0            =]");
+ui_print("=]           nubernel-2.6.32_v0.0.0           =]");
 ui_print("=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]");
 ui_print("");sleep(2);
 show_progress(1.335, 0);
