@@ -2,11 +2,14 @@ Samsung SPH-D700 (Epic 4G) kernel by nubecoder
 
 http://www.nubecoder.com/
 
-nubernel-EC05_v0.0.0
+nubernel-2.6.32_v0.0.0
 
 
-Changelog:
+Change log:
 =]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]=]
+
+10-22-2011:
+Version re-branding, etc.
 
 10-19-2011:
 Fixing permissions for bclean script.
